Update CSS timestamp and change Save to Update & Next button

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <title>Facebook Curator & Uploader</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css?t=1764373877">
+    <link rel="stylesheet" href="style.css?t=1764377621">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
         rel="stylesheet">
@@ -184,7 +184,7 @@
                         <div style="display:flex; gap:10px;">
                             <button id="btn-ai" class="btn btn-magic" onclick="runAiEnhance()">✨ Magic Enhance</button>
                             <button class="btn btn-success" style="background:var(--success); color:white;"
-                                onclick="alert('Save not implemented in this demo')">Save Changes</button>
+                                onclick="updateAndNext()">Update & Next</button>
                         </div>
                     </div>
 
