--- a/assets/index.html
+++ b/assets/index.html
@@ -1005,9 +1005,9 @@
                     </div>
                     <div class="editor-row">
                         <label class="editor-label">Category</label>
-                        <select id="edit-category" class="editor-select">
-                            <option value="">-- Select Category --</option>
-                        </select>
+                        <input type="text" id="edit-category" list="category-list" class="editor-input"
+                            placeholder="Select or type category...">
+                        <datalist id="category-list"></datalist>
                     </div>
                     <div class="editor-row">
                         <label class="editor-label">Content</label>
