--- a/assets/index.html
+++ b/assets/index.html
@@ -932,22 +932,34 @@
                     <div class="stat-lbl">Tokens</div>
                 </div>
             </div>
-            <div id="debug-log-window"
-                style="flex:1; margin-left:15px; max-height:60px; overflow-y:auto; border:1px solid var(--border); border-radius:4px; padding:5px; font-size:10px; font-family: 'JetBrains Mono', monospace; background:#fff;">
+            <div style="display:flex; flex-direction:column; gap:8px; margin-left:auto;">
+                <!-- Debug Log Window -->
+                <div id="debug-log-window"
+                    style="width:400px; max-height:60px; overflow-y:auto; border:1px solid var(--border); border-radius:4px; padding:5px; font-size:10px; font-family: 'JetBrains Mono', monospace; background:#fff;">
+                </div>
+
+                <!-- Control Buttons -->
+                <div style="display:flex; gap:8px; align-items:center;">
+                    <!-- Local Controls -->
+                    <div id="header-local-controls" style="display:none; gap:8px;">
+                        <button class="btn btn-sm btn-primary" onclick="toggleSelectAll()">Select All</button>
+                        <button class="btn btn-sm btn-danger" onclick="executeBulk('delete')">Delete Selected</button>
+                    </div>
+
+                    <!-- Enhance Controls -->
+                    <div id="header-enhance-controls" style="display:none; gap:8px; align-items:center;">
+                        <button class="btn btn-sm btn-primary" id="wp-fetch-btn" onclick="fetchWpPosts()">Fetch
+                            Posts</button>
+                        <label style="font-size:12px; display:flex; align-items:center; gap:5px; white-space:nowrap;">
+                            <input type="checkbox" id="setting-fetch-startup">
+                            <span>Fetch on Startup</span>
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="header-row-bottom">
-            <div id="header-local-controls" style="display:none; gap:10px; align-items:center;">
-                <button class="btn btn-primary" onclick="toggleSelectAll()">Select All</button>
-                <button class="btn btn-danger" onclick="executeBulk('delete')">Delete Selected</button>
-            </div>
-            <div id="header-enhance-controls" style="display:none; gap:10px; align-items:center;">
-                <button class="btn btn-primary" id="wp-fetch-btn" onclick="fetchWpPosts()">Fetch Posts</button>
-                <label style="font-size:12px; display:flex; align-items:center; gap:5px;">
-                    <input type="checkbox" id="setting-fetch-startup">
-                    <span>Fetch on Startup</span>
-                </label>
-            </div>
+        <div class="header-row-bottom" style="display:none;">
+            <!-- Placeholder for future use -->
         </div>
     </div>
 
