--- a/assets/index.html
+++ b/assets/index.html
@@ -932,10 +932,10 @@
                     <div class="stat-lbl">Tokens</div>
                 </div>
             </div>
-            <div style="display:flex; flex-direction:column; gap:8px; margin-left:auto;">
+            <div style="display:flex; flex-direction:column; gap:8px; margin-left:auto; align-items:flex-end;">
                 <!-- Debug Log Window -->
                 <div id="debug-log-window"
-                    style="width:400px; max-height:60px; overflow-y:auto; border:1px solid var(--border); border-radius:4px; padding:5px; font-size:10px; font-family: 'JetBrains Mono', monospace; background:#fff;">
+                    style="width:450px; height:65px; overflow-y:auto; border:2px solid var(--border); border-radius:6px; padding:8px; font-size:11px; font-family: 'Courier New', monospace; background:#f8f9fa; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
                 </div>
 
                 <!-- Control Buttons -->
@@ -944,16 +944,6 @@
                     <div id="header-local-controls" style="display:none; gap:8px;">
                         <button class="btn btn-sm btn-primary" onclick="toggleSelectAll()">Select All</button>
                         <button class="btn btn-sm btn-danger" onclick="executeBulk('delete')">Delete Selected</button>
-                    </div>
-
-                    <!-- Enhance Controls -->
-                    <div id="header-enhance-controls" style="display:none; gap:8px; align-items:center;">
-                        <button class="btn btn-sm btn-primary" id="wp-fetch-btn" onclick="fetchWpPosts()">Fetch
-                            Posts</button>
-                        <label style="font-size:12px; display:flex; align-items:center; gap:5px; white-space:nowrap;">
-                            <input type="checkbox" id="setting-fetch-startup">
-                            <span>Fetch on Startup</span>
-                        </label>
                     </div>
                 </div>
             </div>
@@ -998,6 +988,15 @@
                             <span style="font-size:11px; color:var(--text-muted);">Uncat: <strong
                                     id="wp-stat-uncat">0</strong></span>
                         </div>
+                        <div style="margin-bottom:8px;">
+                            <button class="btn btn-sm btn-primary" style="width:100%;" onclick="fetchWpPosts()">Fetch
+                                Posts</button>
+                        </div>
+                        <label
+                            style="font-size:12px; display:flex; align-items:center; gap:5px; cursor:pointer; margin-bottom:8px;">
+                            <input type="checkbox" id="setting-fetch-startup">
+                            <span>Fetch on Startup</span>
+                        </label>
                         <label style="font-size:12px; display:flex; align-items:center; gap:5px; cursor:pointer;">
                             <input type="checkbox" id="wp-filter-uncat" checked onchange="fetchWpPosts(true)">
                             <span>Uncategorized Only</span>
