Change category to dropdown menu with New Category option

--- a/assets/index.html
+++ b/assets/index.html
@@ -1016,9 +1016,9 @@
                     </div>
                     <div class="editor-row">
                         <label class="editor-label">Category</label>
-                        <input type="text" id="edit-category" list="category-list" class="editor-input"
-                            placeholder="Select or type category...">
-                        <datalist id="category-list"></datalist>
+                        <select id="edit-category" class="editor-select">
+                            <option value="">-- Select Category --</option>
+                        </select>
                     </div>
                     <div class="editor-row">
                         <label class="editor-label">Content</label>
